Fix header on mobile

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -716,6 +716,10 @@ html {
 @media screen and (max-width: 600px) {
   #header {
     font-size: 18px;
+
+    h1 {
+      font-size: 2.8em;
+    }
   }
 }
 
